
[TestPrunePromptOutputSnapshot - 1]
stdout:
❌ cmd.prune.unmanaged.entry, Arg 1: {Count: 0, Data: &map[file:/cfg/mods/extra.jar]}
? cmd.prune.confirm (cmd.init.prompt.option.yes.short/cmd.init.prompt.option.no.short) [default: cmd.init.prompt.option.no.short]: 
stderr:

---

[TestPrunePromptDisabledOutputSnapshot - 1]
stdout:

stderr:
cmd.prune.error.prompt_disabled
cmd.prune.error.prompt_disabled_hint, Arg 1: {Count: 0, Data: &map[force_command:mmm prune --force]}
---

[TestPruneNonInteractiveOutputSnapshot - 1]
stdout:
❌ cmd.prune.unmanaged.entry, Arg 1: {Count: 0, Data: &map[file:/cfg/mods/extra.jar]}
stderr:
cmd.prune.error.prompt_disabled
---

[TestPruneUnattendedOutputSnapshot - 1]
stdout:
❌ cmd.prune.unmanaged.entry, Arg 1: {Count: 0, Data: &map[file:/cfg/mods/extra.jar]}
stderr:
cmd.prune.error.prompt_disabled
---
